--- a/_config.yml
+++ b/_config.yml
@@ -475,10 +475,10 @@ yandex_site_verification: 4227a483ac83a3da
 
 # Baidu Webmaster tools verification.
 # See: https://ziyuan.baidu.com/site
-baidu_site_verification:
+baidu_site_verification: acBHhdI7H6
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
-baidu_push: false
+baidu_push: true
 
 
 # ---------------------------------------------------------------
@@ -583,7 +583,7 @@ comments:
 disqus:
   enable: true
   shortname: https-chucs-github-io
-  count: true 
+  count: true
   #post_meta_order: 0
 
 # DisqusJS
