--- a/_config.yml
+++ b/_config.yml
@@ -475,6 +475,7 @@ yandex_site_verification: 4227a483ac83a3da
 
 # Baidu Webmaster tools verification.
 # See: https://ziyuan.baidu.com/site
+# daviswwwEarth
 baidu_site_verification: acBHhdI7H6
 
 # Enable baidu push so that the blog will push the url to baidu automatically which is very helpful for SEO.
