--- a/_config.yml
+++ b/_config.yml
@@ -705,10 +705,10 @@ leancloud_visitors:
 # Visit https://console.firebase.google.com/u/0/ to get apiKey and projectId.
 # Visit https://firebase.google.com/docs/firestore/ to get more information about firestore.
 firestore:
-  enable: true
+  enable: false
   collection: articles # Required, a string collection name to access firestore database
-  apiKey: AIzaSyAdZ6z1YrmCbZGesidOkFhO4FtQMUfqEss
-  projectId: web-site-count
+  apiKey: 
+  projectId: 
 
 # Show Views / Visitors of the website / page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi
