--- a/_config.yml
+++ b/_config.yml
@@ -678,7 +678,7 @@ google_analytics:
   only_pageview: false
 
 # Baidu Analytics
-baidu_analytics: # <app_id>
+baidu_analytics: be512bd008c5b387799d9e82e9ef25e1
 
 # Growingio Analytics
 growingio_analytics: # <project_id>
